@@ -29,6 +29,15 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|nio
 operator|.
 name|charset
@@ -655,63 +664,6 @@ argument_list|,
 name|dataSource
 argument_list|)
 expr_stmt|;
-name|File
-name|tmpdir
-init|=
-name|File
-operator|.
-name|createTempFile
-argument_list|(
-literal|"test"
-argument_list|,
-literal|"tmp"
-argument_list|,
-name|createTempDir
-argument_list|()
-operator|.
-name|toFile
-argument_list|()
-argument_list|)
-decl_stmt|;
-name|Files
-operator|.
-name|delete
-argument_list|(
-name|tmpdir
-operator|.
-name|toPath
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|tmpdir
-operator|.
-name|mkdir
-argument_list|()
-expr_stmt|;
-name|byte
-index|[]
-name|content
-init|=
-literal|"secret"
-operator|.
-name|getBytes
-argument_list|(
-name|StandardCharsets
-operator|.
-name|UTF_8
-argument_list|)
-decl_stmt|;
-name|createFile
-argument_list|(
-name|tmpdir
-argument_list|,
-literal|"enckeyfile.txt"
-argument_list|,
-name|content
-argument_list|,
-literal|false
-argument_list|)
-expr_stmt|;
 name|props
 operator|.
 name|put
@@ -738,15 +690,7 @@ name|put
 argument_list|(
 literal|"encryptKeyFile"
 argument_list|,
-operator|new
-name|File
-argument_list|(
-name|tmpdir
-argument_list|,
-literal|"enckeyfile.txt"
-argument_list|)
-operator|.
-name|getAbsolutePath
+name|createEncryptionKeyFile
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -836,6 +780,149 @@ name|conn
 argument_list|,
 name|connection
 argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testRetrieveFromJndiWithCredentialsWithEncryptedAndResolvedPwd
+specifier|public
+name|void
+name|testRetrieveFromJndiWithCredentialsWithEncryptedAndResolvedPwd
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MockInitialContextFactory
+operator|.
+name|bind
+argument_list|(
+literal|"java:comp/env/jdbc/JndiDB"
+argument_list|,
+name|dataSource
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+name|JdbcDataSource
+operator|.
+name|JNDI_NAME
+argument_list|,
+literal|"java:comp/env/jdbc/JndiDB"
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+literal|"user"
+argument_list|,
+literal|"Fred"
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+literal|"encryptKeyFile"
+argument_list|,
+literal|"${foo.bar}"
+argument_list|)
+expr_stmt|;
+name|props
+operator|.
+name|put
+argument_list|(
+literal|"password"
+argument_list|,
+literal|"U2FsdGVkX18QMjY0yfCqlfBMvAB4d3XkwY96L7gfO2o="
+argument_list|)
+expr_stmt|;
+name|EasyMock
+operator|.
+name|expect
+argument_list|(
+name|dataSource
+operator|.
+name|getConnection
+argument_list|(
+literal|"Fred"
+argument_list|,
+literal|"MyPassword"
+argument_list|)
+argument_list|)
+operator|.
+name|andReturn
+argument_list|(
+name|connection
+argument_list|)
+expr_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|values
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|values
+operator|.
+name|put
+argument_list|(
+literal|"bar"
+argument_list|,
+name|createEncryptionKeyFile
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|context
+operator|.
+name|getVariableResolver
+argument_list|()
+operator|.
+name|addNamespace
+argument_list|(
+literal|"foo"
+argument_list|,
+name|values
+argument_list|)
+expr_stmt|;
+name|jdbcDataSource
+operator|.
+name|init
+argument_list|(
+name|context
+argument_list|,
+name|props
+argument_list|)
+expr_stmt|;
+name|connection
+operator|.
+name|setAutoCommit
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|mockControl
+operator|.
+name|replay
+argument_list|()
+expr_stmt|;
+name|jdbcDataSource
+operator|.
+name|getConnection
+argument_list|()
+expr_stmt|;
+name|mockControl
+operator|.
+name|verify
+argument_list|()
 expr_stmt|;
 block|}
 annotation|@
@@ -2621,6 +2708,84 @@ name|getClass
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|createEncryptionKeyFile
+specifier|private
+name|String
+name|createEncryptionKeyFile
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|File
+name|tmpdir
+init|=
+name|File
+operator|.
+name|createTempFile
+argument_list|(
+literal|"test"
+argument_list|,
+literal|"tmp"
+argument_list|,
+name|createTempDir
+argument_list|()
+operator|.
+name|toFile
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Files
+operator|.
+name|delete
+argument_list|(
+name|tmpdir
+operator|.
+name|toPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|tmpdir
+operator|.
+name|mkdir
+argument_list|()
+expr_stmt|;
+name|byte
+index|[]
+name|content
+init|=
+literal|"secret"
+operator|.
+name|getBytes
+argument_list|(
+name|StandardCharsets
+operator|.
+name|UTF_8
+argument_list|)
+decl_stmt|;
+name|createFile
+argument_list|(
+name|tmpdir
+argument_list|,
+literal|"enckeyfile.txt"
+argument_list|,
+name|content
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+return|return
+operator|new
+name|File
+argument_list|(
+name|tmpdir
+argument_list|,
+literal|"enckeyfile.txt"
+argument_list|)
+operator|.
+name|getAbsolutePath
+argument_list|()
+return|;
 block|}
 block|}
 end_class
